<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/lv"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:clickable="true"
        android:background="@color/windowBackground">

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="72dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/sheet_edit"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/icon1"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:id="@+id/icon1"
            android:src="@drawable/ic_action_edit" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:background="@color/windowBackground">

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="72dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/sheet_delete"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/icon2"
            android:clickable="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:id="@+id/icon2"
            android:src="@drawable/ic_action_delete_grey" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/windowBackground">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="72dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/sheet_cancel"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/icon3"
            android:clickable="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:id="@+id/icon3"
            android:src="@drawable/ic_action_cancel" />
    </RelativeLayout>


</LinearLayout>