<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    android:layout_marginTop="48dp"
    android:background="@null"
    android:orientation="horizontal"
    android:padding="10dp">

    <View
        android:id="@+id/block"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@color/colorPrimary" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="72dp"
        android:background="@color/White" />

    <ImageButton
        android:id="@+id/imb2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@null"
        android:src="@drawable/ic_action_close" />

    <RelativeLayout
        android:id="@+id/etNoteLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="72dp">
        <LinearLayout
            android:id="@+id/titleLiner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imb2"
            android:layout_marginTop="56dp">

            <TextView
                android:id="@+id/datetitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/etNoteTitle"
                android:layout_alignBottom="@+id/etNoteTitle"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="16dp"
                android:text="@string/date_title"
                android:textColor="#212121"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/etNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:lines="1"
                android:padding="8dp"
                android:textColor="#212121"
                android:textSize="16dp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/dateLiner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleLiner">

            <TextView
                android:id="@+id/datecontent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/date_time"
                android:textColor="#212121"
                android:textSize="20dp" />

            <TimePicker
                android:id="@+id/timepicker"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_marginLeft="16dp"
                android:timePickerMode="spinner">

            </TimePicker>

            <TextView
                android:id="@+id/timeshower"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:padding="8dp"
                android:textColor="#212121"
                android:textSize="16dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/postLiner"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/dateLiner">

            <TextView
                android:id="@+id/postscript"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/postscript"
                android:textColor="#212121"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/postEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/timepicker"
                android:layout_alignStart="@+id/timepicker"
                android:layout_below="@+id/timepicker"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:minLines="3"
                android:padding="8dp"
                android:scrollbars="vertical"
                android:textColor="#212121"
                android:textSize="16dp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/postLiner"
            android:layout_margin="16dp"
            android:text="@string/hint" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lineBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnDelete"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:background="@drawable/ripple_bg"
            android:padding="8dp"
            android:text="删除"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnEdit"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:background="@drawable/ripple_bg"
            android:padding="8dp"
            android:text="修改"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSave"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:background="@drawable/ripple_bg"
            android:gravity="center"
            android:padding="8dp"
            android:text="保存"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>